# cctv

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cameras.yaml.example  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-and-installable-cli.md  1-2-yaml-config-file-loading.md  1-3-config-validation-with-actionable-error-reporting.md  1-4-vapix-api-client-get-and-set-parameters.md  2-1-concurrent-axis-camera-discovery.md  2-2-discovery-output-and-subnet-override.md  3-1-read-before-write-state-reconciliation.md  3-2-smb-share-configuration-via-vapix.md  3-3-motion-detection-configuration-via-vapix.md  3-4-failure-isolated-apply-executor.md  3-5-per-camera-output-summary-and-exit-codes.md  deferred-work.md  epic-3-retro-2026-04-05.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-01.md  prd.md  product-brief-cctv.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
src/cctv/: cli.py  config.py  executor.py  reconciler.py  reporter.py  scanner.py  vapix.py
tests/: conftest.py  test_cli.py  test_config.py  test_executor.py  test_reconciler.py  test_reporter.py  test_scanner.py  test_vapix.py
