[project]
name = "cctv-as-code"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24",
    "requests>=2.33",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-cov>=6.0"]

[project.scripts]
cctv = "cctv.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cctv --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/cctv"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
